# MLLm

./: .gitignore  README.md  main.py  pyproject.toml
build_llm_from_scratch/: .gitignore  README.md  byte_pair_tik_token.py  causal_attention.py  download_gpt.py  embedding_lookup.py  feed_forward_network.py  finetune.py  gelu.py  gpt.py  inference.py  input_target_pair.py  main.py  multi_head_attention.py  multi_head_attention_wrapper.py  positional_embeddings.py  process_data.py  pyproject.toml  re_tokens.py  scrap_books.py  self_attention.py  simple_attention.py  transformer.py  utils.py  verdict_dataloader.py
build_llm_from_scratch/runs/gpt163m/: events.out.tfevents.1763781538.arch.17683.0  events.out.tfevents.1763798666.arch.29798.0  events.out.tfevents.1763806269.arch.55578.0  events.out.tfevents.1763815862.arch.82633.0
llm_spam_classification/: .gitignore  dataset.py  download_sms_data.py  feed_forward_network.py  finetune.py  gpt.py  layer_normalisation.py  main.py  multi_head_attention.py  pyproject.toml  transformer.py  utils.py
